--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,6 @@
-cmake_minimum_required(VERSION 3.7)
+cmake_minimum_required(VERSION 3.18)
+
+project(GLTutorial)
 
 add_subdirectory(GLTutorial01)
 add_subdirectory(GLTutorial02)
