--- a/GLTutorial02/CMakeLists.txt
+++ b/GLTutorial02/CMakeLists.txt
@@ -13,3 +13,4 @@ target_link_libraries(tutorial${NUMBER} PRIVATE EGL)
 target_link_libraries(tutorial${NUMBER} PRIVATE GLESv2)
 configure_file(Simple2D.frag Simple2D.frag COPYONLY)
 configure_file(Simple2D.vert Simple2D.vert COPYONLY)
+configure_file(Gradient2D.vert Gradient2D.vert COPYONLY)
